--- a/src/app/components/drag-and-drop-files/drag-and-drop-files.component.html
+++ b/src/app/components/drag-and-drop-files/drag-and-drop-files.component.html
@@ -15,7 +15,9 @@
 
   <!-- Template para mostrar la imagen -->
   <ng-template #imagePreview>
-    <img [src]="previewUrl" alt="Uploaded Image" />
+    <div class="inner-area">
+      <img [src]="previewUrl" alt="Uploaded Image" />
+    </div>
     <!-- Botón opcional para eliminar o cambiar la imagen -->
     <button class="remove-btn" (click)="reset()">Remove Image</button>
   </ng-template>
