--- a/src/app/components/drag-and-drop-files/drag-and-drop-files.component.css
+++ b/src/app/components/drag-and-drop-files/drag-and-drop-files.component.css
@@ -1,50 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-* {
-  
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #e2e2e2;
-  text-align: center;
-  min-height: 100vh;
-}
 
 .drag-area {
   background: #e2e2e2;
-  border-radius: 10px;
+  
   box-shadow: -3px -3px 7px #ffffff73,
     2px 2px 5px rgba(94, 104, 121, 0.288);
-  height: 500px;
-  width: 700px;
+  height: 100%;
+  width: 25vw;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: relative;
 }
 
-.drag-area.active {
-  border: 2px solid #595959;
-}
+
 
 .drag-area .icon {
-  font-size: 100px;
+  font-size: 5em;
   color: #595959;
 }
 
 .drag-area header {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 500;
   color: #595959;
 }
 
 .drag-area span {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 500;
   color: #595959;
   margin: 10px 0 15px 0;
@@ -53,7 +39,7 @@ body {
 
 .drag-area button {
   padding: 10px 25px;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 500;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -61,16 +47,16 @@ body {
   outline: none;
   background: #e2e2e2;
     color: #595959;
-    border-radius: 25px;
+    
     box-shadow: 2px 2px 5px #BABECC,
         -5px -5px 10px #ffffff73;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.drag-area button:focus {
-  box-shadow: inset 1px 1px 2px #BABECC,
-      inset -1px -1px 2px #ffffff73;
+  position: absolute;
+  bottom: 10px; 
+  left: 50%; 
+  transform: translateX(-50%); 
+  
 }
 
 .drag-area img {
@@ -78,4 +64,10 @@ body {
   width: 100%;
   object-fit: cover;
   border-radius: 5px;
+}
+
+.inner-area {
+  height: calc(100% - 25px);
+  width: calc(100% - 25px);
+  border-radius: 50%;
 }
