--- a/src/app/pages/provider-screen/provider-screen.component.css
+++ b/src/app/pages/provider-screen/provider-screen.component.css
@@ -71,11 +71,8 @@
 .text {
     font-size: 30px;
     font-weight: 600;
-    color: #595959;
-    position: absolute;
-    left: 50%;
-    top: 6%;
-    transform: translate(-50%, -50%); 
+    margin-bottom: 10px;
+    color: #595959; 
 }
 
 .img-area {
@@ -272,6 +269,5 @@
 
 .filters-sub1
 {
-    margin-top: 3rem;
     height: 75vh;
 }
