Provider en info service

--- a/src/app/pages/info-service/info-service.component.html
+++ b/src/app/pages/info-service/info-service.component.html
@@ -61,7 +61,7 @@
                 <div class="ownerinfo">
                     <i class="fa-solid fa-user"></i>
                     <div>
-                        <h2>Proveedor: {{ content.service?.user?.username }}</h2>
+                        <h2>Proveedor: {{ content.user.username }}</h2>
                         <h3>10 meses de anfitrionado</h3>
                     </div>
                 </div>
