--- a/src/app/pages/info-service/info-service.component.html
+++ b/src/app/pages/info-service/info-service.component.html
@@ -57,54 +57,80 @@
                         <i class="fa-regular fa-star"></i>
                     </button>
                     <span
-                        class="flex flex-col gap-2 items-center absolute -translate-y-[calc(125%)] left-1/2 z-20 origin-bottom -translate-x-1/2 scale-0 rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm text-black shadow-md transition-all duration-300 ease-in-out group-hover:scale-100"
-                    >
+                        class="flex flex-col gap-2 items-center absolute -translate-y-[calc(125%)] left-1/2 z-20 origin-bottom -translate-x-1/2 scale-0 rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm text-black shadow-md transition-all duration-300 ease-in-out group-hover:scale-100">
                         <div class="rating">
-                            <input type="radio" id="star-1" name="star-radio" value="star-1" (change)="setChecked(5)" [checked]="myRating.rating === 5">
+                            <input type="radio" id="star-1" name="star-radio" value="star-1" (change)="setChecked(5)"
+                                [checked]="myRating.rating === 5">
                             <label for="star-1">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path pathLength="360"
+                                        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                                    </path>
+                                </svg>
                             </label>
-                            <input type="radio" id="star-2" name="star-radio" value="star-1" (change)="setChecked(4)" [checked]="myRating.rating === 4">
+                            <input type="radio" id="star-2" name="star-radio" value="star-1" (change)="setChecked(4)"
+                                [checked]="myRating.rating === 4">
                             <label for="star-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path pathLength="360"
+                                        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                                    </path>
+                                </svg>
                             </label>
-                            <input type="radio" id="star-3" name="star-radio" value="star-1" (change)="setChecked(3)" [checked]="myRating.rating === 3">
+                            <input type="radio" id="star-3" name="star-radio" value="star-1" (change)="setChecked(3)"
+                                [checked]="myRating.rating === 3">
                             <label for="star-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path pathLength="360"
+                                        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                                    </path>
+                                </svg>
                             </label>
-                            <input type="radio" id="star-4" name="star-radio" value="star-1" (change)="setChecked(2)" [checked]="myRating.rating === 2">
+                            <input type="radio" id="star-4" name="star-radio" value="star-1" (change)="setChecked(2)"
+                                [checked]="myRating.rating === 2">
                             <label for="star-4">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path pathLength="360"
+                                        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                                    </path>
+                                </svg>
                             </label>
-                            <input type="radio" id="star-5" name="star-radio" value="star-1" (change)="setChecked(1)" [checked]="myRating.rating === 1">
+                            <input type="radio" id="star-5" name="star-radio" value="star-1" (change)="setChecked(1)"
+                                [checked]="myRating.rating === 1">
                             <label for="star-5">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path pathLength="360" d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"></path></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                    <path pathLength="360"
+                                        d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                                    </path>
+                                </svg>
                             </label>
                         </div>
-                        <textarea name="" id="comment" [value]="myRating.comment" class="h-16 w-full resize-none outline-none rounded-lg border border-neutral-400 px-2 py-1"></textarea>
-                        <button (click)="onChangeComment()" class="px-2 py-1 rounded-full bg-blue-200 border border-neutral-400">Guardar</button>
+                        <textarea name="" id="comment" [value]="myRating.comment"
+                            class="h-16 w-full resize-none outline-none rounded-lg border border-neutral-400 px-2 py-1"></textarea>
+                        <button (click)="onChangeComment()"
+                            class="px-2 py-1 rounded-full bg-blue-200 border border-neutral-400">Guardar</button>
                     </span>
                 </div>
                 <h3>{{ averageRatingReceived | number : "1.1-1" }}</h3>
                 <h3>{{ reviewsCountReceived }} Reseñas</h3>
             </div>
 
-                <div class="ownerinfo">
-                    <i class="fa-solid fa-user"></i>
-                    <div>
-                        <h2>Proveedor: {{ content.user.username }}</h2>
-                        <h3>10 meses de anfitrionado</h3>
-                    </div>
+            <div class="ownerinfo">
+                <i class="fa-solid fa-user"></i>
+                <div>
+                    <h2>Proveedor: {{ content.user.username }}</h2>
+                    <h3>{{ content.user.email }}</h3>
                 </div>
-                <div class="descriptioninfo">
-                    <h3>Descripción</h3>
-                    <p>
-                        {{ content.service?.description }}
-                    </p>
-                    <div class="moreinfodescription">
-                        <h4>Mostrar más</h4>
-                        <i class="fa-solid fa-chevron-right"></i>
-                    </div>
+            </div>
+            <div class="descriptioninfo">
+                <h3>Descripción</h3>
+                <p>
+                    {{ content.service?.description }}
+                </p>
+                <div class="moreinfodescription">
+                    <h4>Mostrar más</h4>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
 
                 <h3>Categoría</h3>
                 <p>
@@ -158,8 +184,7 @@
                             <li *ngFor="let day of week" class="day-name">
                                 {{ day | slice : 0 : 3 }}
                             </li>
-                            <li (click)="clickDayExit(day)"
-                                [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
+                            <li (click)="clickDayExit(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
                                 [ngClass]="{ 'selected-day': selectedDayExit === day }"
                                 *ngFor="let day of monthSelectExit; let first = first">
                                 <span>{{ day?.value }}</span>
@@ -171,7 +196,7 @@
             </div>
         </div>
         <div class="summary">
-            <h2>Precio noche</h2>
+            <h2>Precio </h2>
             <h4>$ {{ content.service?.price }} pesos</h4>
             <div class="itemsdetails">
                 <div class="eachitem">
@@ -183,8 +208,6 @@
                     <h5>{{ content.service?.duration }} horas </h5>
                 </div>
                 <div class="eachitem">
-                    <h4>Huéspedes</h4>
-                    <h5>4</h5>
                 </div>
             </div>
             <h1>Total: $ {{ content.service?.price }} pesos </h1>
