image provider done

--- a/src/app/pages/provider-screen/provider-screen.component.html
+++ b/src/app/pages/provider-screen/provider-screen.component.html
@@ -10,7 +10,7 @@
             <div class="wrapper">
                 <div class="img-area">
                     <div class="inner-area">
-                        <img [src]="imageUrl" alt="photo" class="fotografia" id="profileImage">
+                        <img [src]="photo || 'assets/avatar.svg'" alt="photo" class="fotografia" id="profileImage">
                     </div>
                 </div>
                 <!-- Botón circular pequeño con el ícono de + para subir imagen -->
